@startuml

title __SUBCOMMANDS's Class Diagram__\n

  namespace io.github.johnytech6 {
    namespace dm {
      namespace commands {
        namespace subcommands {
          class io.github.johnytech6.dm.commands.subcommands.EndSession {
              + EndSession()
              + getDescription()
              + getName()
              + getSubcommandArguments()
              + getSyntax()
              + perform()
          }
        }
      }
    }
  }
  

  namespace io.github.johnytech6 {
    namespace dm {
      namespace commands {
        namespace subcommands {
          class io.github.johnytech6.dm.commands.subcommands.FreezeHero {
              + FreezeHero()
              + getDescription()
              + getName()
              + getSubcommandArguments()
              + getSyntax()
              + perform()
          }
        }
      }
    }
  }
  

  namespace io.github.johnytech6 {
    namespace dm {
      namespace commands {
        namespace subcommands {
          class io.github.johnytech6.dm.commands.subcommands.Invisibility_toggle {
              + Invisibility_toggle()
              + getDescription()
              + getName()
              + getSubcommandArguments()
              + getSyntax()
              + perform()
          }
        }
      }
    }
  }
  

  namespace io.github.johnytech6 {
    namespace dm {
      namespace commands {
        namespace subcommands {
          class io.github.johnytech6.dm.commands.subcommands.Mode_toggleDm {
              + Mode_toggleDm()
              + getDescription()
              + getName()
              + getSubcommandArguments()
              + getSyntax()
              + perform()
          }
        }
      }
    }
  }
  

  namespace io.github.johnytech6 {
    namespace dm {
      namespace commands {
        namespace subcommands {
          class io.github.johnytech6.dm.commands.subcommands.NightVision_toggle {
              + NightVision_toggle()
              + getDescription()
              + getName()
              + getSubcommandArguments()
              + getSyntax()
              + perform()
          }
        }
      }
    }
  }
  

  namespace io.github.johnytech6 {
    namespace dm {
      namespace commands {
        namespace subcommands {
          class io.github.johnytech6.dm.commands.subcommands.PuppeterMode_toggle {
              {static} - ph : PuppeterHandler
              + PuppeterMode_toggle()
              + getDescription()
              + getName()
              + getSubcommandArguments()
              + getSyntax()
              + perform()
          }
        }
      }
    }
  }
  

  namespace io.github.johnytech6 {
    namespace dm {
      namespace commands {
        namespace subcommands {
          class io.github.johnytech6.dm.commands.subcommands.SetChair {
              + SetChair()
              + getDescription()
              + getName()
              + getSubcommandArguments()
              + getSyntax()
              + perform()
          }
        }
      }
    }
  }
  

  namespace io.github.johnytech6 {
    namespace dm {
      namespace commands {
        namespace subcommands {
          class io.github.johnytech6.dm.commands.subcommands.StartSession {
              + StartSession()
              + getDescription()
              + getName()
              + getSubcommandArguments()
              + getSyntax()
              + perform()
          }
        }
      }
    }
  }
  

  namespace io.github.johnytech6 {
    namespace dm {
      namespace commands {
        namespace subcommands {
          class io.github.johnytech6.dm.commands.subcommands.TeftMode_toggle {
              + TeftMode_toggle()
              + getDescription()
              + getName()
              + getSubcommandArguments()
              + getSyntax()
              + perform()
          }
        }
      }
    }
  }
  

  namespace io.github.johnytech6 {
    namespace dm {
      namespace commands {
        namespace subcommands {
          class io.github.johnytech6.dm.commands.subcommands.UnfreezeHero {
              + UnfreezeHero()
              + getDescription()
              + getName()
              + getSubcommandArguments()
              + getSyntax()
              + perform()
          }
        }
      }
    }
  }
  

  io.github.johnytech6.dm.commands.subcommands.EndSession -up-|> io.github.johnytech6.dm.commands.SubCommand
  io.github.johnytech6.dm.commands.subcommands.EndSession o-- io.github.johnytech6.Handler.DMHandler : dmh
  io.github.johnytech6.dm.commands.subcommands.EndSession o-- io.github.johnytech6.Handler.PluginHandler : pluginHandler
  io.github.johnytech6.dm.commands.subcommands.FreezeHero -up-|> io.github.johnytech6.dm.commands.SubCommand
  io.github.johnytech6.dm.commands.subcommands.FreezeHero o-- io.github.johnytech6.Handler.DMHandler : dmh
  io.github.johnytech6.dm.commands.subcommands.FreezeHero o-- io.github.johnytech6.Handler.HeroHandler : hh
  io.github.johnytech6.dm.commands.subcommands.FreezeHero o-- io.github.johnytech6.Handler.PluginHandler : pluginHandler
  io.github.johnytech6.dm.commands.subcommands.Invisibility_toggle -up-|> io.github.johnytech6.dm.commands.SubCommand
  io.github.johnytech6.dm.commands.subcommands.Invisibility_toggle o-- io.github.johnytech6.Handler.DMHandler : dmh
  io.github.johnytech6.dm.commands.subcommands.Invisibility_toggle o-- io.github.johnytech6.Handler.PluginHandler : pluginHandler
  io.github.johnytech6.dm.commands.subcommands.Mode_toggleDm -up-|> io.github.johnytech6.dm.commands.SubCommand
  io.github.johnytech6.dm.commands.subcommands.Mode_toggleDm o-- io.github.johnytech6.Handler.DMHandler : dmh
  io.github.johnytech6.dm.commands.subcommands.Mode_toggleDm o-- io.github.johnytech6.Handler.PluginHandler : pluginHandler
  io.github.johnytech6.dm.commands.subcommands.NightVision_toggle -up-|> io.github.johnytech6.dm.commands.SubCommand
  io.github.johnytech6.dm.commands.subcommands.NightVision_toggle o-- io.github.johnytech6.Handler.DMHandler : dmh
  io.github.johnytech6.dm.commands.subcommands.NightVision_toggle o-- io.github.johnytech6.Handler.PluginHandler : pluginHandler
  io.github.johnytech6.dm.commands.subcommands.PuppeterMode_toggle -up-|> io.github.johnytech6.dm.commands.SubCommand
  io.github.johnytech6.dm.commands.subcommands.PuppeterMode_toggle o-- io.github.johnytech6.Handler.DMHandler : dmh
  io.github.johnytech6.dm.commands.subcommands.PuppeterMode_toggle o-- io.github.johnytech6.Handler.PluginHandler : pluginHandler
  io.github.johnytech6.dm.commands.subcommands.SetChair -up-|> io.github.johnytech6.dm.commands.SubCommand
  io.github.johnytech6.dm.commands.subcommands.SetChair o-- io.github.johnytech6.Handler.PluginHandler : ph
  io.github.johnytech6.dm.commands.subcommands.StartSession -up-|> io.github.johnytech6.dm.commands.SubCommand
  io.github.johnytech6.dm.commands.subcommands.StartSession o-- io.github.johnytech6.Handler.DMHandler : dmh
  io.github.johnytech6.dm.commands.subcommands.StartSession o-- io.github.johnytech6.Handler.PluginHandler : pluginHandler
  io.github.johnytech6.dm.commands.subcommands.TeftMode_toggle -up-|> io.github.johnytech6.dm.commands.SubCommand
  io.github.johnytech6.dm.commands.subcommands.TeftMode_toggle o-- io.github.johnytech6.Handler.DMHandler : dmh
  io.github.johnytech6.dm.commands.subcommands.TeftMode_toggle o-- io.github.johnytech6.Handler.PluginHandler : ph
  io.github.johnytech6.dm.commands.subcommands.UnfreezeHero -up-|> io.github.johnytech6.dm.commands.SubCommand
  io.github.johnytech6.dm.commands.subcommands.UnfreezeHero o-- io.github.johnytech6.Handler.HeroHandler : hh
  io.github.johnytech6.dm.commands.subcommands.UnfreezeHero o-- io.github.johnytech6.Handler.PluginHandler : ph


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
